--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "clsx": "^1.1.1",
         "i18next": "^21.6.5",
         "next": "12.0.7",
         "prop-types": "^15.8.1",
@@ -16,6 +17,7 @@
         "sass": "^1.47.0"
     },
     "devDependencies": {
+        "@types/react": "^17.0.38",
         "eslint": "8.6.0",
         "eslint-config-next": "12.0.7"
     }
